objects/Business_Unit_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Business Unit Plans</relationshipLabel>
        <relationshipName>Business_Unit_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approach_to_growth_and_innovation__c</fullName>
        <label>Approach to growth and innovation</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BU_Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Unit_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU_Name_1__c</fullName>
        <label>BU Name</label>
        <picklist>
            <controllingField>BU_Name__c</controllingField>
            <picklistValues>
                <fullName>Applications and Business Solutions (ABS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy/IM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Security Products (ESP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphics Solution Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology Outsourcing (ITO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Management (ITM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services (MPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertica</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_Name__c</fullName>
        <label>BG Name</label>
        <picklist>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_SOW__c</fullName>
        <label>Current SOW (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_TAM__c</fullName>
        <label>Current TAM ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_happenings_at_the_account__c</fullName>
        <label>Current happenings at the account</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FY11_Revenue_actuals__c</fullName>
        <label>FY11 Sales (actuals) ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY12_Revenue_YTD__c</fullName>
        <label>FY12 Sales (actuals) ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY13_Projected_Revenue__c</fullName>
        <label>FY13 Projected Sales ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY14_Projected_Revenue__c</fullName>
        <label>FY14 Projected Sales ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY15_Projected_Revenue__c</fullName>
        <label>FY15 Projected Sales ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integration_status_buPlanReport__c</fullName>
        <label>BU Plan PPT Integration Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Contracts__c</fullName>
        <label>Key Contracts</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes_or_links_to_additional_information__c</fullName>
        <label>Notes or links to additional information</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Obstacles_Challenges__c</fullName>
        <label>Obstacles / Challenges</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Plan Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Unit_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>BU Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted – Pending Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <label>Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <label>Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <label>Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Maximum Score is 5</inlineHelpText>
        <label>BU Plan Average Score</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GWE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK &amp; I</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_over_Year_1__c</fullName>
        <formula>( FY12_Revenue_YTD__c - FY11_Revenue_actuals__c ) / FY11_Revenue_actuals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year over Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_over_Year_2__c</fullName>
        <formula>(FY13_Projected_Revenue__c - FY12_Revenue_YTD__c) / FY12_Revenue_YTD__c</formula>
        <label>Year over Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_over_Year_3__c</fullName>
        <formula>(FY14_Projected_Revenue__c - FY13_Projected_Revenue__c)/FY13_Projected_Revenue__c</formula>
        <label>Year over Year 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Business Unit Plan</label>
    <nameField>
        <label>BU Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Unit Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>